Polished webpanel, and reframed priority fee to equal the entire value added to the collateral utxo
